Updated by task 'AutomatedMDTask_1666617714754_TM-MT_1666617749319'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/8636c6e36b56d3af26e35f7444b40a795649a377

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -3,14 +3,37 @@ title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
-source-git-commit: 98ff75d5d79f5d0722b5fe1449e22ae0af22fabf
-workflow-type: ht
-source-wordcount: '1707'
-ht-degree: 100%
+source-git-commit: ca790863c40589c53d487c752742a3c6da528c2c
+workflow-type: tm+mt
+source-wordcount: '2159'
+ht-degree: 96%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2022
+
+## Oktober 2022 {#oct2022}
+
+| Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- |
+| **Ordner in Workspace-Projekten** | Ordner in Workspace-Projekten helfen Benutzern dabei, ihre Projekte mithilfe von Ordnern zu organisieren und zu kategorisieren, damit sie leichter abgerufen und darauf zugreifen können. Ein freigegebener Unternehmensordner ermöglicht es Administratoren, Inhalte einfach zu erstellen und für alle Workspace-Benutzer freizugeben [Weitere Infos](/help/analysis-workspace/build-workspace-project/workspace-folders/about-folders.md) | 19. Oktober 2022 |
+| **Experimentier-Bedienfeld** | Mit diesem neuen Workspace-Bedienfeld können CJA-Benutzende den Anstieg und die Konfidenz von A/B-Experimenten mit beliebigen Quellen bewerten – online, offline, Adobe-Lösungen, Adobe Journey Optimizer und sogar eigenen Daten. [Weitere Informationen](/help/analysis-workspace/c-panels/experimentation.md) | 5. Oktober 2022 |
+| Visualisierung der **[!UICONTROL Zusammenfassung der Schlüsselmetriken]** | Mit der Visualisierung der [!UICONTROL Zusammenfassung der Schlüsselmetriken] können Sie sehen, wie sich eine wichtige Metrik innerhalb einer bestimmten Zeitspanne entwickelt. Außerdem können Sie damit die Leistung von Metriken über zwei Zeiträume hinweg vergleichen. Weitere Informationen | Schrittweiser Rollout ab 5. Oktober 2022 |
+| **Unterstützung von Datumsfeldern in CJA** | Ermöglicht CJA die Berichterstellung über Datums- und Uhrzeitfelder. [Weitere Informationen](/help/data-views/data-views-usecases.md#date) | 5. Oktober 2022 |
+| **Mobile App: Benutzerdefinierte Detailansichten** | Benutzerdefinierte Detailansichten ermöglichen es Ihnen, Informationen an Ihre Zielgruppe noch zielgerichteter auszuwählen, damit diese nicht abgelenkt wird. Sie können das Layout der Detailansicht jeder Scorecard-Kachel ändern, und Text hinzufügen, um Endbenutzenden zu helfen, die Daten besser zu verstehen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/create-scorecard.html?lang=de) | 5. Oktober 2022 |
+| **Mehrwert-Variablen ohne Unterscheidung von Groß- und Kleinschreibung** | Bei Variablen mit mehreren Werten, bei denen nicht zwischen Groß- und Kleinschreibung unterschieden wird, werden die in `mvvar1` - `mvvar3` wird nicht mehr automatisch in Kleinbuchstaben geschrieben. Stattdessen spiegeln Daten, die über den Analytics Source Connector an Adobe Experience Platform und CJA übergeben werden, die ursprüngliche Groß-/Kleinschreibung wider, die von der Seite weitergegeben wurde. | 24. Oktober 2022 |
+
+{style=&quot;table-layout:auto&quot;}
+
+### Wichtige Hinweise für CJA-Admins
+
+| Hinweis | Hinweis hinzugefügt oder aktualisiert | Beschreibung |
+| --- | --- | --- |
+| **Standard-Landingpage** | 29. September 2023 | Die [neue Landingpage](/help/getting-started/landing.md) wurde Anfang dieses Jahres eingeführt und wird ab **Januar 2023** standardmäßig allen Benutzenden angezeigt. Die aktuelle Seite wird eingestellt, sodass nur mehr die neue Seite verwendet wird. |
+| **Verbessertes IP-Geolokalisierungs-Mapping** | 29. September 2022 | Der Anbieter von IP-Suchen für Adobe, Digital Element, aktualisiert auf einen neuen verbesserten Datensatz (NetAcuity Pulse) für die Geolokalisierung von IPs. Adobe Analytics hat die Einführung dieses neuen Datensatzes auf **Januar 2023** verschoben. Die neue Datenbank wird genauer sein als frühere Versionen. Einige Geolokalisierungen von IPs werden sich ändern/verbessern, wenn die neue Datenbank übernommen wird.<p> CJA-Daten, die über den [!UICONTROL Analytics Source Connector] bereitgestellt werden, nutzen ebenfalls automatisch die neuen Mappings. |
+| Bedingungen für die automatische Ausführung der **[!UICONTROL Anomalieerkennung]** | 29. September 2022 | Derzeit wird die [!UICONTROL Anomalieerkennung] automatisch für alle Spalten von Zeitreihen-Freiformtabellen ausgeführt. Um sicherzustellen, dass Daten für Analysen verfügbar sind und Projekte schneller geladen werden, nimmt Adobe Änderungen an der automatischen Ausführung der [!UICONTROL Anomalieerkennung] vor. Ab dem **26. Oktober 2022** wird die Anomalieerkennung nur für die erste Metrikspalte in einer Tabelle automatisch ausgeführt. Sie können die Spalteneinstellungen bei Bedarf so konfigurieren, dass die [!UICONTROL Anomalieerkennung] auch für andere Spalten ausgeführt wird. |
+
+{style=&quot;table-layout:auto&quot;}
 
 ## September 2022 {#sep2022}
 
@@ -52,10 +75,10 @@ AN-298412
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Unterstützung für numerische Felder als Suchschlüssel und Suchwerte | Dies ist nützlich, wenn Sie Zeichenfolgenwerte mit einem numerischen Feld wie COGS oder Marge für eine Produkt-SKU klassifizieren möchten. Wenn Sie Metriken aus der Suche zulassen, können Sie diese Datenpunkte in das Reporting einfließen lassen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/create-connection.html?lang=de#numeric) | 20. Juli 2022 |
-| **Zielgruppenveröffentlichung im Echtzeit-Kundenprofil** | Ermöglicht Ihnen das Veröffentlichen von in Customer Journey Analytics entdeckten Zielgruppen in Adobe Experience Platform/Echtzeit-Kundenprofilen für Kunden-Targeting und Personalisierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/audiences-overview.html?lang=de) | 5. August 2022 |
+| **Zielgruppenveröffentlichung im Echtzeit-Kundenprofil** | Ermöglicht Ihnen das Veröffentlichen von in Customer Journey Analytics entdeckten Zielgruppen in Adobe Experience Platform/Echtzeit-Kundenprofilen für Kunden-Targeting und Personalisierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/audiences-overview.html?lang=en) | 5. August 2022 |
 | Bedienfeld „Gleichzeitige Medienbetrachter“ | Erkennen Sie, wo hohe Auslastungen auftraten oder wo es zu Einbrüchen kam. Erhalten Sie wertvolle Einblicke in die Qualität von Inhalten und die Interaktion mit Betrachtern und erhalten Sie Hilfe bei der Fehlerbehebung oder der Planung in Bezug auf Volumen und Skalierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/panels/media-concurrent-viewers.html?lang=de) | **9. August 2022** |
 | Panel „Verbrachte Zeit bei der Medienwiedergabe“ | Die mit Medienwiedergabe verbrachte Zeit bietet wertvolle Einblicke in die Interaktion mit Betrachtenden und ermöglicht es Medienunternehmen, tiefere, detailliertere Einblicke mit der minütigen Benutzerinteraktion durch erweiterte Zeitanalysen mit Funktionen zur Tageszeiteneinteilung zu gewinnen. Sie können feststellen, wie viel Zeit zu einem bestimmten Zeitpunkt mit der Anzeige Ihrer Medien-Streams verbracht wurde. Sie können die Wiedergabedauer nach verschiedenen Granularitäten unterteilen, einschließlich der neuen Granularitäten von 5, 15 und 30 Minuten.  [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/panels/media-playback-timespent/media-playback-time-spent.html?lang=de) | **9. August 2022** |
-| Reporting über neue und wiederholte Sitzungen | Sie können jetzt feststellen, ob es sich bei einer bestimmten Sitzung um die allererste Sitzung einer Person handelte. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views-usecases.html?lang=de#new-repeat) | 17. August 2022 |
+| Reporting über neue und wiederholte Sitzungen | Sie können jetzt feststellen, ob es sich bei einer bestimmten Sitzung um die allererste Sitzung einer Person handelte. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views-usecases.html?lang=en#new-repeat) | 17. August 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -83,7 +106,7 @@ AN-298412
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Dimensions-Teilzeichenfolgen | Bietet mehrere Methoden zum Extrahieren des gewünschten Teils einer Zeichenfolge zur Verwendung als Dimensionselemente. Mit dieser Funktion können Sie eine Zeichenfolgendimension auch als Array behandeln, wenn die Zeichenfolge durch Trennzeichen getrennte Werte enthält. [Weitere Informationen](../data-views/component-settings/substring.md) | 20. April 2022 |
-| Data Prep für den Analytics-Quell-Connector | Der [Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de) ist jetzt in die [Datenvorbereitungsfunktionen](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html?lang=de) von Adobe Experience Platform integriert. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem über 100 Data-Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für ein Profil aktivieren.<p>CJA-Kunden, die mehrere Report Suites über den Analytics-Quell-Connector aufnehmen, können jetzt Spaltenunterschiede zwischen Report Suites beheben. Wenn beispielsweise „Suchbegriff“ in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite gespeichert ist, können Sie mithilfe von Data Prep die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
+| Data Prep für den Analytics-Quell-Connector | Der [Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html) ist jetzt in die [Datenvorbereitungsfunktionen](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html?lang=de) von Adobe Experience Platform integriert. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem über 100 Data-Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für ein Profil aktivieren.<p>CJA-Kunden, die mehrere Report Suites über den Analytics-Quell-Connector aufnehmen, können jetzt Spaltenunterschiede zwischen Report Suites beheben. Wenn beispielsweise „Suchbegriff“ in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite gespeichert ist, können Sie mithilfe von Data Prep die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
