--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -3,15 +3,15 @@ title: Versionshinweise zu Customer Journey Analytics für 2023
 description: Versionshinweise zu CJA für 2023 anzeigen
 feature: Release Notes
 source-git-commit: c7ed97ed718a7ec1f9a96193d00267d35f12f523
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '24'
-ht-degree: 70%
+ht-degree: 100%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2023
 
-## Versionshinweise für Januar 2023
+## Versionshinweise Januar 2023
 
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
