--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -4,7 +4,7 @@ description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
 source-git-commit: dbb7edae43fdc970cacf5863ecd13df75deaefad
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '2159'
 ht-degree: 100%
 
@@ -75,10 +75,10 @@ AN-298412
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Unterstützung für numerische Felder als Suchschlüssel und Suchwerte | Dies ist nützlich, wenn Sie Zeichenfolgenwerte mit einem numerischen Feld wie COGS oder Marge für eine Produkt-SKU klassifizieren möchten. Wenn Sie Metriken aus der Suche zulassen, können Sie diese Datenpunkte in das Reporting einfließen lassen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/create-connection.html?lang=de#numeric) | 20. Juli 2022 |
-| **Zielgruppenveröffentlichung im Echtzeit-Kundenprofil** | Ermöglicht Ihnen das Veröffentlichen von in Customer Journey Analytics entdeckten Zielgruppen in Adobe Experience Platform/Echtzeit-Kundenprofilen für Kunden-Targeting und Personalisierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/audiences-overview.html?lang=en) | 5. August 2022 |
+| **Zielgruppenveröffentlichung im Echtzeit-Kundenprofil** | Ermöglicht Ihnen das Veröffentlichen von in Customer Journey Analytics entdeckten Zielgruppen in Adobe Experience Platform/Echtzeit-Kundenprofilen für Kunden-Targeting und Personalisierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/audiences-overview.html?lang=de) | 5. August 2022 |
 | Bedienfeld „Gleichzeitige Medienbetrachter“ | Erkennen Sie, wo hohe Auslastungen auftraten oder wo es zu Einbrüchen kam. Erhalten Sie wertvolle Einblicke in die Qualität von Inhalten und die Interaktion mit Betrachtern und erhalten Sie Hilfe bei der Fehlerbehebung oder der Planung in Bezug auf Volumen und Skalierung. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/panels/media-concurrent-viewers.html?lang=de) | **9. August 2022** |
 | Panel „Verbrachte Zeit bei der Medienwiedergabe“ | Die mit Medienwiedergabe verbrachte Zeit bietet wertvolle Einblicke in die Interaktion mit Betrachtenden und ermöglicht es Medienunternehmen, tiefere, detailliertere Einblicke mit der minütigen Benutzerinteraktion durch erweiterte Zeitanalysen mit Funktionen zur Tageszeiteneinteilung zu gewinnen. Sie können feststellen, wie viel Zeit zu einem bestimmten Zeitpunkt mit der Anzeige Ihrer Medien-Streams verbracht wurde. Sie können die Wiedergabedauer nach verschiedenen Granularitäten unterteilen, einschließlich der neuen Granularitäten von 5, 15 und 30 Minuten.  [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/panels/media-playback-timespent/media-playback-time-spent.html?lang=de) | **9. August 2022** |
-| Reporting über neue und wiederholte Sitzungen | Sie können jetzt feststellen, ob es sich bei einer bestimmten Sitzung um die allererste Sitzung einer Person handelte. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views-usecases.html?lang=en#new-repeat) | 17. August 2022 |
+| Reporting über neue und wiederholte Sitzungen | Sie können jetzt feststellen, ob es sich bei einer bestimmten Sitzung um die allererste Sitzung einer Person handelte. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/data-views-usecases.html?lang=de#new-repeat) | 17. August 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -106,7 +106,7 @@ AN-298412
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
 | Dimensions-Teilzeichenfolgen | Bietet mehrere Methoden zum Extrahieren des gewünschten Teils einer Zeichenfolge zur Verwendung als Dimensionselemente. Mit dieser Funktion können Sie eine Zeichenfolgendimension auch als Array behandeln, wenn die Zeichenfolge durch Trennzeichen getrennte Werte enthält. [Weitere Informationen](../data-views/component-settings/substring.md) | 20. April 2022 |
-| Data Prep für den Analytics-Quell-Connector | Der [Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html) ist jetzt in die [Datenvorbereitungsfunktionen](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html?lang=de) von Adobe Experience Platform integriert. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem über 100 Data-Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für ein Profil aktivieren.<p>CJA-Kunden, die mehrere Report Suites über den Analytics-Quell-Connector aufnehmen, können jetzt Spaltenunterschiede zwischen Report Suites beheben. Wenn beispielsweise „Suchbegriff“ in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite gespeichert ist, können Sie mithilfe von Data Prep die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
+| Data Prep für den Analytics-Quell-Connector | Der [Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de) ist jetzt in die [Datenvorbereitungsfunktionen](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html?lang=de) von Adobe Experience Platform integriert. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem über 100 Data-Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für ein Profil aktivieren.<p>CJA-Kunden, die mehrere Report Suites über den Analytics-Quell-Connector aufnehmen, können jetzt Spaltenunterschiede zwischen Report Suites beheben. Wenn beispielsweise „Suchbegriff“ in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite gespeichert ist, können Sie mithilfe von Data Prep die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
