Updated by task 'AutomatedMDTask_1673455569202_TM-MT_1673455596006'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/3862e24a42e8059025401dae9cec32b2b3f4f11f

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -3,14 +3,43 @@ title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
-source-git-commit: dbb7edae43fdc970cacf5863ecd13df75deaefad
-workflow-type: ht
-source-wordcount: '2159'
-ht-degree: 100%
+source-git-commit: e0d25084f229ffcb065c176b8f0985c13acaeb97
+workflow-type: tm+mt
+source-wordcount: '2585'
+ht-degree: 98%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2022
+
+## November 2022 {#nov22}
+
+| Funktion | Beschreibung | [Start des Rollouts](/help/release-notes/releases.md) | [Allgemeine Verfügbarkeit](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- | --- |
+| Visualisierung der **[!UICONTROL Zusammenfassung der Schlüsselmetriken]** | Mit der Visualisierung der [!UICONTROL Zusammenfassung der Schlüsselmetriken] können Sie sehen, wie sich eine wichtige Metrik innerhalb einer bestimmten Zeitspanne entwickelt. Außerdem können Sie damit die Leistung von Metriken über zwei Zeiträume hinweg vergleichen. [Weitere Informationen](/help/analysis-workspace/visualizations/key-metric.md) | 5. Oktober 2022 | 19. Oktober 2022 |
+| **Variablen mit mehreren Werten, bei denen nicht zwischen Groß- und Kleinschreibung unterschieden wird** | Bei Variablen mit mehreren Werten, bei denen nicht zwischen Groß- und Kleinschreibung unterschieden wird, werden die in `mvvar1` - `mvvar3` gespeicherten Werte nicht mehr automatisch in Kleinbuchstaben geschrieben. Stattdessen werden die Daten, die über den Analytics Source Connector an Adobe Experience Platform und CJA übergeben werden, die ursprüngliche Groß-/Kleinschreibung haben, die von der Seite weitergegeben wurde. ASC/CJA-Spalten `_experience.analytics.customDimensions.lists.list1.list[]` - `_experience.analytics.customDimensions.lists.list3.list[]` sind von dieser Änderung betroffen. | Nicht angegeben | 24. Oktober 2022 |
+| **CJA-Auditprotokoll** | Mit Customer Journey Analytics (CJA) können Sie Benutzeraktivitäten auf verschiedene Dienste und Funktionen in Form von „Auditprotokollen“ prüfen. Diese Protokolle bilden einen Prüfpfad, der Ihnen bei der Fehlerbehebung helfen kann und Ihrem Unternehmen ermöglicht, betriebliche Datenverwaltungsrichtlinien und gesetzliche Anforderungen wie den Health Insurance Portability and Accountability Act (HIPAA) einzuhalten. Diese Protokolle waren bisher nur über die Auditprotokolle-API verfügbar. [Weitere Informationen](/help/privacy/audit-log.md) | Nicht angegeben | 26. Oktober 2022 |
+| **HIPAA-Bereitschaft** | Adobe unterstützt jetzt nur noch den Empfang, die Verwendung, die Pflege oder die Übermittlung geschützter Gesundheitsinformationen in Customer Journey Analytics und anderen auf Experience Platform basierenden Anwendungen für Healthcare Shield. Healthcare Shield richtet sich an Kundinnen und Kunden im Gesundheitswesen, die entweder eine abgedeckte Organisation oder ein Geschäftsverband nur in den USA sind. [Weitere Informationen](https://www.adobe.com/trust/compliance/hipaa-ready.html) | Nicht angegeben | 7. November 2022 |
+| **Passwortschutz für geplante Projekte** | Diese Funktion ist Teil der HIPAA-Bereitschaft und gilt nur für Healthcare Shield-Kunden. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/curate-share/t-schedule-report.html?lang=de#password) | Nicht angegeben | 7. November 2022. |
+
+{style=&quot;table-layout:auto&quot;}
+
+### Fehlerbehebungen
+
+* Es wurde ein Problem behoben, bei dem aktuelle MacOS-Versionen fälschlicherweise als „Macintosh“ bezeichnet wurden. Mit dieser Fehlerbehebung beginnt die Betriebssystemdimension mit der Nummerierung der MacOS-Version, beginnend mit MacOS 11. (AN-301834)
+
+### Weitere Fehlerbehebungen
+
+AN-302367; AN-302562; AN-304036
+
+### Wichtige Hinweise für CJA-Admins
+
+| Hinweis | Hinweis hinzugefügt oder aktualisiert | Beschreibung |
+| --- | --- | --- |
+| **Standard-Landingpage** | 5. Januar 2023 | Die [neue Landingpage](/help/getting-started/landing.md) die Anfang 2022 eingeführt wurde, wird zum Standarderlebnis für alle Benutzer auf **11. Januar 2023**. Die aktuelle Seite wird eingestellt, sodass nur mehr die neue Seite verwendet wird. |
+| **Verbessertes IP-Geolokalisierungs-Mapping** | 5. Januar 2023 | Der Anbieter von IP-Suchen für Adobe, Digital Element, aktualisiert auf einen neuen verbesserten Datensatz (NetAcuity Pulse) für die Geolokalisierung von IPs. Adobe Analytics hat die Annahme dieses neuen Datensatzes auf **11. Januar 2023**. Die neue Datenbank wird genauer sein als frühere Versionen. Einige Geolokalisierungen von IPs werden sich ändern/verbessern, wenn die neue Datenbank übernommen wird.<p> CJA-Daten, die über den [!UICONTROL Analytics Source Connector] bereitgestellt werden, nutzen ebenfalls automatisch die neuen Mappings. |
+
+{style=&quot;table-layout:auto&quot;}
 
 ## Oktober 2022 {#oct2022}
 
