Updating Old File for core commit 52bc657ae876637bfd807574a9548baefcd140b3

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -4,9 +4,9 @@ description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
 source-git-commit: e0d25084f229ffcb065c176b8f0985c13acaeb97
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '2585'
-ht-degree: 98%
+ht-degree: 100%
 
 ---
 
@@ -36,8 +36,8 @@ AN-302367; AN-302562; AN-304036
 
 | Hinweis | Hinweis hinzugefügt oder aktualisiert | Beschreibung |
 | --- | --- | --- |
-| **Standard-Landingpage** | 5. Januar 2023 | Die [neue Landingpage](/help/getting-started/landing.md) die Anfang 2022 eingeführt wurde, wird zum Standarderlebnis für alle Benutzer auf **11. Januar 2023**. Die aktuelle Seite wird eingestellt, sodass nur mehr die neue Seite verwendet wird. |
-| **Verbessertes IP-Geolokalisierungs-Mapping** | 5. Januar 2023 | Der Anbieter von IP-Suchen für Adobe, Digital Element, aktualisiert auf einen neuen verbesserten Datensatz (NetAcuity Pulse) für die Geolokalisierung von IPs. Adobe Analytics hat die Annahme dieses neuen Datensatzes auf **11. Januar 2023**. Die neue Datenbank wird genauer sein als frühere Versionen. Einige Geolokalisierungen von IPs werden sich ändern/verbessern, wenn die neue Datenbank übernommen wird.<p> CJA-Daten, die über den [!UICONTROL Analytics Source Connector] bereitgestellt werden, nutzen ebenfalls automatisch die neuen Mappings. |
+| **Standard-Landingpage** | 5. Januar 2023 | Die [neue Landingpage](/help/getting-started/landing.md) wurde Anfang 2022 eingeführt und wird ab **11. Januar 2023** standardmäßig allen Benutzenden angezeigt. Die aktuelle Seite wird eingestellt, sodass nur mehr die neue Seite verwendet wird. |
+| **Verbessertes IP-Geolokalisierungs-Mapping** | 5. Januar 2023 | Der Anbieter von IP-Suchen für Adobe, Digital Element, aktualisiert auf einen neuen verbesserten Datensatz (NetAcuity Pulse) für die Geolokalisierung von IPs. Adobe Analytics hat die Einführung dieses neuen Datensatzes auf **11. Januar 2023** verschoben. Die neue Datenbank wird genauer sein als frühere Versionen. Einige Geolokalisierungen von IPs werden sich ändern/verbessern, wenn die neue Datenbank übernommen wird.<p> CJA-Daten, die über den [!UICONTROL Analytics Source Connector] bereitgestellt werden, nutzen ebenfalls automatisch die neuen Mappings. |
 
 {style=&quot;table-layout:auto&quot;}
 
